# ImageLab

./: CMakeLists.txt  README.md  image.ppm  main  main.cpp
include/: BlurFilter.h  ContrastStretchingFilter.h  Filter.cpp  Filter.h  Image.h  ImageManager.h  MyString.h  NegativeFilter.h  PBMImage.h  PGMImage.h  PPMImage.h  SharpenFilter.h  SobelFilter.h  String.h  ThresholdFilter.h  Vector.h  Vector.hpp
include/Filters/: BlurFilter.h  ContrastStretchingFilter.h  NegativeFilter.h  SharpenFilter.h  SobelFilter.h  ThresholdFilter.h
include/ImageTypes/: PBMImage.h  PGMImage.h  PPMImage.h
src/: BlurFilter.cpp  ContrastStretchingFilter.cpp  Image.cpp  ImageManager.cpp  NegativeFilter.cpp  PBMImage.cpp  PGMImage.cpp  PPMImage.cpp  SharpenFilter.cpp  SobelFilter.cpp  String.cpp  ThresholdFilter.cpp
src/Filters/: BlurFilter.cpp  ContrastStretchingFilter.cpp
src/ImageTypes/: PPMImage.cpp
